# seL4hello

./: .gitignore  .gitmodules  settings.cmake
.devcontainer/: Dockerfile  devcontainer.json
projects/hello/: CMakeLists.txt
